öffnet zwei dumps